# rustnot

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .rustfmt.toml  Cargo.toml  README.md
src/: app.rs  components.rs  config.rs  main.rs  notification.rs  settings.rs  settings_file.rs  style.rs  styles.rs  timer.rs
