[package]
name = "rustnot"
version = "1.0.0"
authors = ["Christian Riedel <cielquan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
notify-rust = "^4"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.3.1"
