[package]
name = "rustnot"
version = "2.0.0"
authors = ["Christian Riedel <cielquan@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
iced = { version = "0.3", features = ["debug", "tokio"]}
serde = "^1.0"
serde_derive = "^1.0"
thiserror = "1.0.30"
toml = "0.5.8"

[target.'cfg(unix)'.dependencies]
notify-rust = "^4"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.3.1"
